# RealDeal

./: .gitignore  LICENSE  README.md  _push_github.sh  config.yaml  pyproject.toml  requirements.txt
scripts/: push_github.sh
src/real_deal/: __init__.py  cli.py  config.py  filters.py  listing_classification.py  listing_utils.py  models.py
src/real_deal/connectors/: __init__.py  base.py  city_coords.py  rapidapi_realtor.py  rapidapi_redfin.py
src/real_deal/land/: __init__.py  ai_listing_analysis.py  detection.py  engine.py  financials.py  mocks.py  models.py  providers.py  report.py  scoring.py  signals.py
src/real_deal/storage/: __init__.py  db.py  export.py
src/real_deal/underwriting/: __init__.py  engine.py  rent.py  signals.py
tests/: __init__.py  conftest.py  test_filters.py  test_underwriting.py
